[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/GUI/EnergyUI.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/EnergyBar.gd" type="Script" id=2]
[ext_resource path="res://src/GUI/HUD.gd" type="Script" id=3]
[ext_resource path="res://src/GUI/HealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/GUI/0025EmptyEnergyCore.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/GUI/0026FullEnergyCore.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/GUI/0044ShieldsUpSprite.png" type="Texture" id=7]
[ext_resource path="res://src/Menus/TacticalMenu.tscn" type="PackedScene" id=8]

[node name="HUD" type="CanvasLayer"]
layer = 0
script = ExtResource( 3 )

[node name="HealthUI" parent="." instance=ExtResource( 4 )]
margin_left = 2.0
margin_right = 42.0

[node name="EnergyUI" type="Label" parent="."]
margin_left = 89.0
margin_top = 40.0
margin_right = 212.0
margin_bottom = 70.0
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = 23.0
margin_right = 503.0
margin_bottom = 279.0
rect_scale = Vector2( 0.28, 0.25 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldsUpSprite" type="Sprite" parent="."]
position = Vector2( 29, 106 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="TacticalMenu" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 145.0
margin_bottom = 145.0
